ionos_sbx/billing/subscriptions-management/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subscriptions-management-deployment
  namespace: billing
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: subscriptions-management
      app.kubernetes.io/name: subscriptions-management
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: subscriptions-management
        app.kubernetes.io/name: subscriptions-management
    spec:
      containers:
        - name: subscriptions-management-container
          image: production.eng.it:8433/dome/subscriptions-management:0.1.3
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: "200m"
              memory: "128Mi"      
            limits:
              memory: 256Mi
              cpu: "1"
          livenessProbe:
            httpGet:
              path: /health
              port: 9000
            initialDelaySeconds: 30
            failureThreshold: 5
            periodSeconds: 10
            timeoutSeconds: 10
