ionos_sbx/billing/subscriptions-management/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: subscriptions-management-ingress
  namespace: billing
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-sbx-issuer
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
    # Redirect from /subscriptions to /subscriptions/
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($uri = "/subscriptions") {
        return 301 /subscriptions/;
      }
spec:
  ingressClassName: nginx
  rules:
  - host: management.dome-marketplace-sbx.org
    http:
      paths:
      - path: /subscriptions(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: subscriptions-management-svc
            port:
              number: 8080
  tls:
  - hosts:
    - management.dome-marketplace-sbx.org
    secretName: subscriptions-management-tls-secret
